Bugzilla bug 95668: added _PR_CleanupThreads and call it from PR_Cleanup. The patch is contributed by jeff@NerdOne.com. Modified files: primpl.h, prinit.c, pruthr.c.